Pug loading and more testing.